--- a/Homeservice.az/HomeService/HomeService.app/Views/Home/Index.cshtml
+++ b/Homeservice.az/HomeService/HomeService.app/Views/Home/Index.cshtml
@@ -589,7 +589,7 @@
                             </div>
                             <div class="contact-meta">
                                 <h5>Adres</h5>
-                                <p>@Model.settingGet.Adress>
+                                <p>@Model.settingGet.Adress</p>
                             </div>
                         </div>
                     </div>
