--- a/Homeservice.az/HomeService/HomeService.app/Views/Home/Index.cshtml
+++ b/Homeservice.az/HomeService/HomeService.app/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-xl-6">
+            <div class="col-lg-6 col-xl-6 d-none d-lg-block">
                 <div class="hero-image wow fadeInUp" data-wow-delay=".25s">
                     <img src="~/assets/images/hero/@Model.settingGet.IntroImage" alt="hero-image" class="image" />
                 </div>
