--- a/Homeservice.az/HomeService/HomeService.app/Views/Shared/_Layout.cshtml
+++ b/Homeservice.az/HomeService/HomeService.app/Views/Shared/_Layout.cshtml
@@ -61,8 +61,8 @@
                                         <a class="menu-scroll"><i class="fa-solid fa-earth-africa"></i></a>
                                         <div id="dropdown">
                                             <p><a style="color:gray" asp-controller="home" asp-action="ChangeLanguage" asp-route-culture="en-US">En</a></p>
-                                            <p><a style="color:gray" asp-controller="home" asp-action="ChangeLanguage" asp-route-culture="az-AZ">az</a></p>
-                                            <p><a style="color:gray" asp-controller="home" asp-action="ChangeLanguage" asp-route-culture="ru-RU">ru</a></p>
+                                            <p><a style="color:gray" asp-controller="home" asp-action="ChangeLanguage" asp-route-culture="az-AZ">AZ</a></p>
+                                            <p><a style="color:gray" asp-controller="home" asp-action="ChangeLanguage" asp-route-culture="ru-RU">RU</a></p>
                                         </div>
 
                                     </li>
